# MGL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  makefile
app/: CMakeLists.txt  main.c  main.cpp  test_input.txt
assembly/: main.asm  makefile  x86-64_main.asm
assembly/handwritten/: core.asm
assembly/handwritten/linux/: convert.asm  core.asm  dfs.asm  graph_walk.asm  man_traversal.asm  manual_graph_walk.asm  stack.asm
assembly/handwritten/mac/: convert.asm  core.asm  dfs.asm  graph_walk.asm  stack.asm
cmake/: Build.cmake  Packages.cmake
config/: CMakeLists.txt  config.c.in  file_config.c.in
configured/: CMakeLists.txt  assembly.c.in  file_config.c.in
data/: input.MF  input_example.MF
demo/: demo.c  makefile
demos/: c_demo  demo.c  demo.py  makefile  map.asm  map_mac.asm  mf_interface.h  winmake.bat
src/compiler/: CMakeLists.txt  compiler.c  compiler.h
src/compiler/code_gen/: CMakeLists.txt  gen_linux_asm.c
src/compiler/code_gen/include/: code_gen.h
src/compiler/code_generation/include/: code_generation.h
src/compiler/common/: CMakeLists.txt  compiler_state.c  error_handler.c  error_handler.cpp
src/compiler/common/include/: compiler_state.h  definitions.h  error_handler.h  safe_strings.h
src/compiler/error_handler/: CMakeLists.txt  error_handler.cpp
src/compiler/error_handler/include/: error_handler.h
src/compiler/il_lang/include/: il.h  instr_table.h
src/compiler/intermediate_lang/: CMakeLists.txt  il.c  instr_table.c
src/compiler/intermediate_lang/include/: il.h  instr_table.h
src/compiler/ir/: CMakeLists.txt  instr_table.c  ir.c
src/compiler/ir/include/: instr_table.h  ir.h
src/compiler/lexer/: CMakeLists.txt  lexer.c  lexer.l  test_input.txt
src/compiler/lexer/include/: lexer.h  token_def.h
src/compiler/parser/: CMakeLists.txt  astree.c  declaration_tracker.c  parser.c  parser.y  type_table.c
src/compiler/parser/include/: astree.h  declaration_tracker.h  parser.h  type_table.h
src/compiler/semantic_analyser/: CMakeLists.txt  look_up_tables.c  type_checker.c
src/compiler/semantic_analyser/include/: look_up_tables.h  type_checker.h
src/compiler/semantic_analyzer/: CMakeLists.txt  look_up_tables.c  semantic_analyzer.c
src/compiler/semantic_analyzer/include/: look_up_tables.h
src/compiler/type_checker/: CMakeLists.txt  look_up_tables.c  type_checker.c
src/compiler/type_checker/include/: look_up_tables.h  type_checker.h
src/lexer/flex_example/: dsl_parser  lex.yy.c  lexer  lexer.l  parser.tab.c  parser.tab.h  parser.y
src/lexer/include/: lexer.h
tests/: CMakeLists.txt
tests/files/: input_fail.MF  input_success.MF
tests/integration_tests/: CMakeLists.txt  integration_tests.cpp  parser_test.cpp
tests/integration_tests/data/: input_test.MF
tests/unit_tests/: CMakeLists.txt  error_locator_test.cpp  il_test.cpp  lexer_test.cpp  parser_test.cpp  type_checker_test.cpp
tests/unit_tests/files/: input.MF
usage/: CMakeLists.txt  c_demo  demo.c  demo.py  makefile  map.asm  map_mac.asm  winmake.bat
